--- a/app/src/main/res/layout/dialog_create_home.xml
+++ b/app/src/main/res/layout/dialog_create_home.xml
@@ -16,12 +16,41 @@
         style="@style/Title"
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/createHomeNameInput"
+        app:layout_constraintBottom_toTopOf="@id/homeDetailPicture"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginVertical="@dimen/line_space"
         android:text="@string/create_home_title" />
 
+    <ImageView
+        android:id="@+id/homeDetailPicture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/rent_icon_128"
+        android:layout_marginVertical="@dimen/line_space_large"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/createHomeTitle"
+        app:layout_constraintBottom_toTopOf="@id/createHomeNameInput"
+        android:contentDescription="@string/home_detail_icon_desc"
+        />
+
+    <ImageButton
+        android:id="@+id/homeEditIcon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/baseline_edit_24"
+        android:scaleY="0.7"
+        android:scaleX="0.7"
+        android:background="@drawable/dialog_background_outlined"
+        app:layout_constraintStart_toEndOf="@id/homeDetailPicture"
+        app:layout_constraintTop_toTopOf="@id/homeDetailPicture"
+        app:layout_constraintBottom_toTopOf="@id/homeDetailPicture"
+        android:foregroundGravity="center"
+        android:translationZ="1dp"
+        app:tint="@color/black"
+        android:contentDescription="@string/create_chore_edit_button"
+        />
     <ImageButton
         android:id="@+id/createHomeCancelButton"
         style="?attr/imageButtonStyle"
@@ -35,6 +64,26 @@
         android:minWidth="0dp"
         android:minHeight="0dp"
         />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/createHomeNameInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minWidth="300dp"
+        style="@style/EditTextLayout"
+        app:layout_constraintTop_toBottomOf="@id/homeDetailPicture"
+        app:layout_constraintBottom_toTopOf="@id/createHomeButtonLayout"
+        app:counterEnabled="true"
+        app:counterMaxLength="25"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:textColor="?attr/colorOnPrimary"
+            android:hint="@string/create_home_hint" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:id="@+id/createHomeButtonLayout"
@@ -56,23 +105,4 @@
             android:text="@string/create_home_yes" />
     </LinearLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/createHomeNameInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minWidth="300dp"
-        style="@style/EditTextLayout"
-        app:layout_constraintTop_toBottomOf="@id/createHomeTitle"
-        app:layout_constraintBottom_toTopOf="@id/createHomeButtonLayout"
-        app:counterEnabled="true"
-        app:counterMaxLength="25"
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:textColor="?attr/colorOnPrimary"
-            android:hint="@string/create_home_hint" />
-    </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
