--- a/app/src/main/res/layout/menu_recycler_row.xml
+++ b/app/src/main/res/layout/menu_recycler_row.xml
@@ -21,7 +21,11 @@
                 android:id="@+id/homesListIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="30dp"
+                android:maxHeight="30dp"
                 android:contentDescription="@string/home_item_place_holder"
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
