--- a/app/src/main/res/layout/fragment_chore.xml
+++ b/app/src/main/res/layout/fragment_chore.xml
@@ -71,7 +71,7 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/addChoreButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/baseline_add_24"
+        app:icon="@drawable/baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/add_chore_button"
         />
