--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -184,24 +184,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/all_rooms_recycler"
-        style="?attr/recyclerViewStyle"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/addHomeButton"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="20dp"
-        />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/all_rooms_recycler"
+            style="?attr/recyclerViewStyle"
+            tools:ignore="MissingConstraints"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/addHomeButton"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/addHomeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:layout_marginBottom="55dp"
             android:contentDescription="@string/add_icon_description"
-            android:src="@drawable/baseline_add_home_24"
+            app:icon="@drawable/baseline_add_home_24"
             android:text="@string/add_home_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
