--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,83 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/homeFragmentTopLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimaryDark"
         >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/homeFragmentTopLayoutCol"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/colorPrimaryDark"
-            >
+        <ImageButton
+            android:id="@+id/homeToMenuButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            style="?attr/imageButtonStyle"
+            android:contentDescription="@string/return_to_menu_button"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:background="@android:color/transparent"
+            android:layout_marginStart="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            />
 
-            <ImageButton
-                android:id="@+id/homeToMenuButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                style="?attr/imageButtonStyle"
-                android:contentDescription="@string/home_item_place_holder"
-                android:src="@drawable/baseline_arrow_back_24"
-                android:background="@android:color/transparent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginStart="20dp"
-                />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/homeName"
+            style="@style/Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center"
+            android:maxLines="1"
+            android:maxWidth="220dp"
+            android:textSize="20sp"
+            android:textColor="?attr/colorOnPrimary"
+            android:text="@string/home_name_placeholder"
+            android:layout_centerInParent="true"
+            app:autoSizeTextType="uniform"
+            app:autoSizeMaxTextSize="20sp"
+            app:autoSizeMinTextSize="16sp"
+            tools:ignore="RelativeOverlap" />
 
+        <ImageButton
+            android:id="@+id/homeSettingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:contentDescription="@string/add_members_button"
+            android:background="@android:color/transparent"
+            android:layout_marginEnd="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/baseline_settings_24" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/homeName"
-                style="@style/Title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@id/homeToMenuButton"
-                app:layout_constraintEnd_toStartOf="@id/homeSettingsButton"
-                android:layout_marginHorizontal="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:gravity="center"
-                android:maxLines="1"
-                android:maxWidth="280dp"
-                android:textSize="20sp"
-                android:textColor="?attr/colorOnPrimary"
-                android:text="@string/home_name_placeholder"
-                app:autoSizeTextType="uniform"
-                app:autoSizeMaxTextSize="20sp"
-                app:autoSizeMinTextSize="16sp"
-                />
+    </RelativeLayout>
 
-            <ImageButton
-                android:id="@+id/homeSettingsButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:contentDescription="@string/add_members_button"
-                android:background="@android:color/transparent"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/baseline_settings_24" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="?attr/colorOutline"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?attr/colorOutline"
+        android:layout_below="@id/homeFragmentTopLayout"
+        />
 
     <ProgressBar
         android:id="@+id/loadingSpinner"
@@ -133,7 +122,4 @@
         android:background="?attr/colorPrimary"
         app:labelVisibilityMode="labeled"
     />
-<!--    app:itemIconTint="@color/bottom_nav_icon_col"-->
-
-
 </RelativeLayout>
