--- a/app/src/main/res/layout/user_picker_row.xml
+++ b/app/src/main/res/layout/user_picker_row.xml
@@ -18,13 +18,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/dialog_background"
         android:backgroundTint="@color/fui_transparent"
-        android:scaleX="2.5"
-        android:scaleY="2.5"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
         android:layout_marginHorizontal="@dimen/line_space_large"
-        android:paddingStart="@dimen/line_space_large"
-        android:paddingEnd="@dimen/line_space_large"
-        android:paddingTop="@dimen/line_space_large"
-        android:paddingBottom="@dimen/line_space"
+        android:padding="@dimen/line_space"
         android:src="@drawable/baseline_person_24"
         android:contentDescription="@string/user_profile_pic_desc"
         />
@@ -34,7 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/line_space"
-        android:padding="10dp"
         android:text="@string/user_name_placeholder"
         android:textColor="?attr/colorOnPrimary"
         android:textStyle="bold" />
