--- a/app/src/main/res/layout/dialog_create_home.xml
+++ b/app/src/main/res/layout/dialog_create_home.xml
@@ -103,6 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
+            android:inputType="textCapSentences"
             android:textColor="?attr/colorOnPrimary"
             android:hint="@string/create_home_hint" />
     </com.google.android.material.textfield.TextInputLayout>
