--- a/app/src/main/res/layout/dialog_chore_detail.xml
+++ b/app/src/main/res/layout/dialog_chore_detail.xml
@@ -52,6 +52,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textCapSentences"
             android:background="?attr/colorPrimary"
             android:textColor="?attr/colorOnPrimary"
             android:hint="@string/create_chore_name_hint" />
