--- a/app/src/main/res/layout/dialog_user_detail.xml
+++ b/app/src/main/res/layout/dialog_user_detail.xml
@@ -76,6 +76,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textCapSentences"
             android:background="?attr/colorPrimary"
             android:textColor="?attr/colorOnPrimary"
             android:hint="@string/user_name_hint" />
