Debugging + multi-user testing

--- a/app/src/main/res/layout/fragment_create_chore_name.xml
+++ b/app/src/main/res/layout/fragment_create_chore_name.xml
@@ -161,6 +161,7 @@
         app:layout_constraintTop_toBottomOf="@id/choreDetailAssignedToText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recyclerButtonLayout"
         android:layout_margin="@dimen/line_space_large"
         />
 
