--- a/app/src/main/res/layout/fragment_create_chore_time.xml
+++ b/app/src/main/res/layout/fragment_create_chore_time.xml
@@ -132,6 +132,8 @@
             app:drawableTint="@color/black"
             app:drawableLeftCompat="@drawable/baseline_close_24"
             android:drawablePadding="5dp"
+            android:layout_marginVertical="@dimen/line_space_large"
+            android:layout_marginHorizontal="@dimen/line_space"
             />
 
         <TextView
@@ -145,6 +147,8 @@
             android:background="@color/white"
             android:textColor="@color/black"
             app:drawableTint="@color/black"
+            android:layout_marginVertical="@dimen/line_space_large"
+            android:layout_marginHorizontal="@dimen/line_space"
             />
 
         <TextView
@@ -158,6 +162,8 @@
             android:textColor="@color/black"
             app:drawableTint="@color/black"
             android:background="@color/white"
+            android:layout_marginVertical="@dimen/line_space_large"
+            android:layout_marginHorizontal="@dimen/line_space"
             />
 
         <TextView
@@ -171,6 +177,8 @@
             app:drawableLeftCompat="@drawable/baseline_weekend_24"
             android:textColor="@color/black"
             app:drawableTint="@color/black"
+            android:layout_marginVertical="@dimen/line_space_large"
+            android:layout_marginHorizontal="@dimen/line_space"
             />
 
         <TextView
@@ -184,6 +192,8 @@
             app:drawableLeftCompat="@drawable/baseline_calendar_24"
             android:textColor="@color/black"
             app:drawableTint="@color/black"
+            android:layout_marginVertical="@dimen/line_space_large"
+            android:layout_marginHorizontal="@dimen/line_space"
             />
 
         <TextView
@@ -197,6 +207,8 @@
             app:drawableLeftCompat="@drawable/baseline_cake_24"
             android:textColor="@color/black"
             app:drawableTint="@color/black"
+            android:layout_marginVertical="@dimen/line_space_large"
+            android:layout_marginHorizontal="@dimen/line_space"
             />
 
     <Button
