--- a/app/src/main/res/layout/dialog_home_detail.xml
+++ b/app/src/main/res/layout/dialog_home_detail.xml
@@ -12,10 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/rent_icon_128"
-        android:layout_marginTop="@dimen/line_space_large"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:scaleY="2"
+        android:scaleX="2"
         app:layout_constraintBottom_toTopOf="@id/homeDetailName"
         android:contentDescription="@string/home_detail_icon_desc"
         />
@@ -24,7 +26,8 @@
         android:id="@+id/homeDetailName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/line_space"
+        android:layout_marginBottom="@dimen/line_space"
+        android:layout_marginTop="50dp"
         android:textSize="@dimen/large_text_size"
         android:textColor="?attr/colorOnPrimary"
         android:textStyle="bold"
